--- a/html/style.css
+++ b/html/style.css
@@ -1,3 +1,9 @@
+:root {
+  --maincolor: rgb(104, 96, 77);
+  --accentcolor: rgb(138,142,117);
+  --whitecolor: rgb(241, 234, 216);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -15,7 +21,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 50;
-  background: rgba(15, 23, 42, 0.95);
+  background: var(--maincolor);
   backdrop-filter: blur(10px);
   border-bottom: 1px solid rgba(148, 163, 184, 0.25);
 }
@@ -36,8 +42,8 @@ body {
   font-weight: 700;
   font-size: 1.1rem;
   letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #e5e7eb;
+  /*<!--text-transform: uppercase;*/
+  color: var(--whitecolor);
   text-decoration: none;
 }
 
@@ -56,7 +62,7 @@ body {
 .nav-links {
   display: flex;
   align-items: center;
-  color: #cbd5f5;
+  color: var(--whitecolor);
   gap: 1.25rem;
   list-style: none;
 }
@@ -64,7 +70,7 @@ body {
 .nav-links a {
   text-decoration: none;
   font-size: 0.95rem;
-  color: #cbd5f5;
+  color: var(--whitecolor);
   padding: 0.3rem 0;
   position: relative;
   transition: color 0.15s ease;
@@ -78,7 +84,7 @@ body {
   width: 0;
   height: 2px;
   border-radius: 999px;
-  background: linear-gradient(90deg, #22d3ee, #6366f1);
+  background: linear-gradient(90deg, var(--accentcolor), var(--whitecolor));
   transition: width 0.2s ease;
 }
 
@@ -124,7 +130,7 @@ body {
   height: 34px;
   border-radius: 999px;
   border: 1px solid rgba(148, 163, 184, 0.6);
-  background: rgba(15, 23, 42, 0.9);
+  background: var(--accentcolor);
   cursor: pointer;
   padding: 0;
 }
@@ -133,7 +139,7 @@ body {
   height: 2px;
   width: 16px;
   border-radius: 999px;
-  background: #e5e7eb;
+  background: var(--whitecolor);
   margin: 0 auto;
   transition: transform 0.18s ease, opacity 0.18s ease;
 }
@@ -231,6 +237,8 @@ body {
   padding: 0 1.25rem;
   margin: 0;
 
+  background-color: white);
+
   
   
 }
@@ -239,14 +247,14 @@ body {
   font-size: clamp(2.1rem, 4vw, 2.8rem);
   margin-bottom: 0.75rem;
   /*color: #e5e7eb;*/
-  color: #cbd5f5;
+  color: var(--accentcolor);
   -webkit-animation: appear 0.6s ease forwards;
 }
 
 .hero h2 {
   margin-bottom: 0.5rem;
   /*color: #e5e7eb;*/
-  color: #cbd5f5;
+  color: var(--accentcolor);
   -webkit-animation: appear 0.6s ease forwards;
 }
 
@@ -456,7 +464,7 @@ body {
 .nav-cart {
   position: relative;
   border: none;
-  background: rgba(15, 23, 42, 0.9);
+  background: var(--accentcolor);
   color: #e5e7eb;
   border-radius: 999px;
   padding: 0.45rem 0.7rem;
@@ -467,7 +475,7 @@ body {
 .nav-cart-mobile {
   position: relative;
   border: none;
-  background: rgba(15, 23, 42, 0.9);
+  background: var(--accentcolor);
   color: #e5e7eb;
   border-radius: 999px;
   padding: 0.45rem 0.7rem;
