--- a/html/style.css
+++ b/html/style.css
@@ -242,10 +242,27 @@ body {
   padding: 0 1.25rem;
   margin: 0;
 
-  background-color: white);
+  background-color: var(--maincolor);
+
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 
   
-  
+}
+
+.hero2 {
+  width: 100%;
+  max-width: 1100px;
+  height: 1000px;
+  margin: 0 auto;
+  margin-top: 40px;
+  background: rgba(255,255,255,0.95);
+  border-radius: 20px;
+  padding: 24px;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.25);
+
+  aspect-ratio: 1 / 1;
+
+  background-color: var(--whitecolor);
 }
 
 .hero h1 {
@@ -768,18 +785,19 @@ body {
   position: relative;
   overflow: hidden;
   border-radius: 22px;
-  aspect-ratio: 1 / 1;
+  aspect-ratio: 1 / 0.7;
 }
 
 .slider-track {
   display: flex;
+  height: 100%;
   transition: transform 0.35s ease;
 }
 
 .slider-track img {
   width: 100%;
   height: 100%;
-  object-fit: contain;   /* ✅ full image visible */
+  object-fit: cover;   /* ✅ full image visible */
   background: #f4f6f8;
   flex-shrink: 0;
 }
