--- a/html/style.css
+++ b/html/style.css
@@ -470,7 +470,7 @@ body {
 /* Background images */
 .bg1 {
   
-  background-image: url("/images/WhatsApp\ Image\ 2026-01-07\ at\ 16.56.28\ \(1\).jpeg");
+  background-image: url("images/WhatsApp\ Image\ 2026-01-07\ at\ 16.56.28\ \(1\).jpeg");
 }
 .bg2 {
   background-image: url("img/item2.jpg");
