--- a/html/style.css
+++ b/html/style.css
@@ -832,4 +832,75 @@ body {
 }
 
 
+/* Loading screen */
+#loading-screen {
+  position: fixed;
+  inset: 0;
+  background: #0f172a; /* dark background */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9998;
+  color: white;
+  transition: opacity 0.4s ease;
+}
+
+/* Spinner */
+.loader {
+  background-image: url(images/20260112_2139_Image\ Generation_remix_01kesyvrf8ef288bhjep12sm6c\(2\).png);
+   width: 120px;              /* size of your image */
+  height: 120px;
+  background-size: contain;
+    background-repeat: no-repeat;
+  background-position: center;
+  /*width: 50px;
+  height: 50px;*/
+  /*border: 4px solid rgba(255,255,255,0.2);
+  border-top: 4px solid white;*/
+  border-radius: 50%;
+  animation: spin 3s ease-in-out;
+  animation-fill-mode: forwards;
+
+  margin-bottom: 12px;
+  z-index: 9999;
+}
+
+@keyframes spin {
+  /*to { transform: rotate(360deg); }*/
+
+  0% {
+    transform: rotate(0deg);
+    filter: drop-shadow(0 0 0 rgba(56,189,248,0));
+  }
+  45% {
+    transform: rotate(360deg);
+    filter: drop-shadow(0 0 0 rgba(255,255,255,0));
+    
+  }
+  55% {
+    transform: rotate(360deg);
+    filter: drop-shadow(0 0 25px #ffffff);
+    scale: 2;
+  }
+  90% {
+    filter: drop-shadow(0 0 0 rgba(255,255,255,0));
+    transform: rotate(0deg);
+    opacity: 1;
+    scale: 1;
+  }
+
+  100% {
+    opacity: 1;
+    scale: 1;
+    
+  }
+
+  
+}
+.hidden {
+  display: none;
+}
+
+
 
