--- a/html/style.css
+++ b/html/style.css
@@ -79,6 +79,7 @@ body {
   padding: 0.3rem 0;
   position: relative;
   transition: color 0.15s ease;
+  
 }
 
 .nav-links a::after {
@@ -86,12 +87,23 @@ body {
   position: absolute;
   left: 0;
   bottom: -0.15rem;
-  width: 0;
+  /*width: 0;*/
+  width: 100%;
   height: 2px;
   border-radius: 999px;
   background: linear-gradient(90deg, var(--accentcolor), var(--whitecolor));
-  transition: width 0.2s ease;
+  /*transition: width 0.2s ease;*/
+  transform: scaleX(0);
+  transform-origin: left;
+  /*transition: transform 0.35s ease;*/
+   transition: transform 0.35s ease;
 }
+
+.nav-links a:hover::after {
+  transform: scaleX(1);
+}
+
+
 
 .nav-links a:hover {
   color: #ffffff;
@@ -159,6 +171,10 @@ body {
 
 .nav-toggle.active span:nth-child(3) {
   transform: translateY(-3px) rotate(-45deg);
+}
+
+ .nav-links a.active::after {
+  transform: scaleX(1);
 }
 
 /* MOBILE MENU */
@@ -264,6 +280,27 @@ body {
 
   background-color: var(--whitecolor);
 }
+
+ @media (max-width: 900px) {
+  .hero2 {
+    width: 100%;
+    max-width: 550px;
+    height: 600px;
+    margin: 0 auto;
+    margin-top: 40px;
+    background: rgba(255,255,255,0.95);
+    border-radius: 20px;
+    padding: 24px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.25);
+  
+    aspect-ratio: 1 / 1;
+  
+    background-color: var(--whitecolor);
+  }
+
+ }
+
+
 
 .hero h1 {
   font-size: clamp(2.1rem, 4vw, 2.8rem);
@@ -836,7 +873,7 @@ body {
 #loading-screen {
   position: fixed;
   inset: 0;
-  background: #0f172a; /* dark background */
+  background: var(--maincolor); /* dark background */
   display: flex;
   flex-direction: column;
   justify-content: center;
