--- a/html/style.css
+++ b/html/style.css
@@ -252,7 +252,8 @@ body {
 .hero2 {
   width: 100%;
   max-width: 1100px;
-  height: 1000px;
+  /*height: 1000px;*/
+  min-height: 10px;
   margin: 0 auto;
   margin-top: 40px;
   background: rgba(255,255,255,0.95);
@@ -260,7 +261,7 @@ body {
   padding: 24px;
   box-shadow: 0 20px 40px rgba(0,0,0,0.25);
 
-  aspect-ratio: 1 / 1;
+  aspect-ratio: 1 / 0.40;
 
   background-color: var(--whitecolor);
 }
